<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tools:context=".asteroiddetail.AsteroidDetailScreen"
    >

    <data>
        <variable
            name="viewModel"
            type="dev.filipebezerra.android.nearearthasteroids.asteroiddetail.AsteroidDetailViewModel"
            />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/asteroid_detail_app_bar_height"
            android:animateLayoutChanges="true"
            android:background="?attr/colorSurface"
            android:fitsSystemWindows="true"
            android:stateListAnimator="@animator/show_toolbar"
            android:theme="@style/Theme.NearEarthAsteroids.AppBarOverlay"
            >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="center"
                app:collapsedTitleTextAppearance="@style/TextAppearance.NearEarthAsteroids.Toolbar.Text"
                app:contentScrim="?attr/colorSurface"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="?attr/colorSurface"
                app:title="@{viewModel.asteroid.name}"
                app:titleEnabled="false"
                app:toolbarId="@id/toolbar"
                >

                <ImageView
                    android:id="@+id/hazardous_asteroid_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/asteroid_detail_app_bar_height"
                    android:contentDescription="@string/asteroid_detail_image_content_description"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    bind:asteroidHazardousOrSafe="@{viewModel.asteroid.isPotentiallyHazardousAsteroid}"
                    tools:src="@tools:sample/backgrounds/scenic"
                    />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_detail_back"
                    app:titleTextColor="?attr/colorOnSurface"
                    />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/asteroid_detail_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/asteroid_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/normal_spacing"
                >

                <TextView
                    android:id="@+id/asteroid_detail_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_spacing"
                    android:minHeight="@dimen/min_size_control"
                    android:gravity="center"
                    android:text="@{@string/asteroid_name_format(viewModel.asteroid.name)}"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textIsSelectable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Asteroid 7753 (1988 XB)"
                    />

                <TextView
                    android:id="@+id/close_approach_date_label"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView.Label"
                    android:text="@string/close_approach_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/asteroid_detail_name"
                    />

                <TextView
                    android:id="@+id/close_approach_date_text"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView"
                    app:layout_constraintBaseline_toBaselineOf="@+id/close_approach_date_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/close_approach_date_label"
                    bind:closeApproachDate="@{viewModel.asteroid.closeApproachData}"
                    tools:text="25 de dez de 2020 (2020-11-24)"
                    />

                <TextView
                    android:id="@+id/absolute_magnitude_label"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView.Label"
                    android:text="@string/absolute_magnitude_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/close_approach_date_label"
                    />

                <TextView
                    android:id="@+id/absolute_magnitude_text"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView"
                    android:text="@{@string/absolute_magnitude_format(viewModel.asteroid.absoluteMagnitude)}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/absolute_magnitude_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/absolute_magnitude_label"
                    tools:text="17.6 (H)"
                    />

                <TextView
                    android:id="@+id/estimated_diameter_label"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView.Label"
                    android:text="@string/estimated_diameter_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/absolute_magnitude_label"
                    />

                <TextView
                    android:id="@+id/estimated_diameter"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView"
                    app:layout_constraintBaseline_toBaselineOf="@+id/estimated_diameter_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/estimated_diameter_label"
                    bind:estimatedDiameter="@{viewModel.asteroid.estimatedDiameter}"
                    tools:text="100.729 - 225.237 (m)"
                    />

                <TextView
                    android:id="@+id/relative_velocity_label"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView.Label"
                    android:text="@string/relative_velocity_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/estimated_diameter_label"
                    />

                <TextView
                    android:id="@+id/relative_velocity"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView"
                    app:layout_constraintBaseline_toBaselineOf="@+id/relative_velocity_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/relative_velocity_label"
                    bind:relativeVelocity="@{viewModel.asteroid.closeApproachData}"
                    tools:text="15.888 (km/s)"
                    />

                <TextView
                    android:id="@+id/distance_from_earth_label"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView.Label"
                    android:text="@string/distance_from_earth_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relative_velocity_label"
                    />

                <TextView
                    android:id="@+id/distance_from_earth"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView"
                    app:layout_constraintBaseline_toBaselineOf="@+id/distance_from_earth_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/distance_from_earth_label"
                    bind:distanceFromEarth="@{viewModel.asteroid.closeApproachData}"
                    tools:text="33,192,703.513 (km)"
                    />

                <TextView
                    android:id="@+id/orbit_class_description_label"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView.Label"
                    android:text="@string/orbit_class_description_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/distance_from_earth_label"
                    />

                <TextView
                    android:id="@+id/orbit_class_description"
                    style="@style/Widget.NearEarthAsteroids.AsteroidInfoTextView.OrbitInfo"
                    android:text="@{viewModel.asteroid.orbitClassDescription}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/orbit_class_description_label"
                    tools:text="Near-Earth asteroid orbits similar to that of 1221 Amor Near-Earth asteroid orbits similar to that of 1221 Amor Near-Earth asteroid orbits similar to that of 1221 Amor"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>